<resources>
    <string name="app_name">CafeQr</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Condition </u></string>
    <string name="btn_lbl_register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your username and e-mail address we\'ll send you a email to reset your password</string>
    <string name="email_sent_success">Email sent successfully to reset your password!</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="picture_of_qr_code">Picture of QR Code</string>
    <string name="enter_organisation_code">Enter Organisation Code</string>
    <string name="enter_venue_code">Enter Venue Code</string>
    <string name="enter_table_id">Enter Table ID</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="account_with_email_already_exists">Account with that email already exists</string>
    <string name="or">Or</string>
    <string name="forgotten_password">Forgotten Password</string>
    <string name="password">Password</string>
    <string name="welcome_to_cafeqr">Welcome To CafeQR</string>
    <string name="logout">Logout</string>
    <string name="welcome_subtitle">Manage your account here</string>
    <string name="failed_to_create_user">Failed to create user</string>
    <string name="successful_login">You are logged in successfully.</string>
    <string name="register_success">You are registered successfully.</string>
    <string name="register_failure">Sign up failed.</string>
    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
    <string name="image_selection_failed">Image selection Failed!</string>
    <string name="err_msg_enter_mobile_number">Please enter mobile number.</string>
    <string name="msg_profile_update_success">Your profile is updated successfully.</string>
    <string name="msg_venue_update_success">Your venue is updated successfully.</string>
    <string name="msg_menu_update_success">Your menu is updated successfully.</string>
    <string name="content_description">image</string>
    <string name="error_getting_user_details">Error while getting user details.</string>
    <string name="error_registering_user">Error while registering the user.</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_organisations">Organisations</string>
    <string name="title_menu">Menu</string>
    <string name="title_venues">Venues</string>
    <string name="title_menus">Menus</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="action_settings">Settings</string>
    <string name="title_settings">SETTINGS</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="title_edit_profile">EDIT PROFILE</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="no_venues_found">No venue found!</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="organisation_type">organisation type</string>
    <string name="et_hint_organisation_name">Please enter the name of the organisation</string>
    <string name="et_hint_venue_name">Please enter the name of the venue</string>
    <string name="click_to_add">Click To Add</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="no_organisations_added_yet">No Organisations Added Yet</string>
    <string name="no_food_added_yet">No food items added yet</string>
    <string name="no_menus_added_yet">No menus added yet</string>
    <string name="no_menus_items_added_yet">No menu items added yet</string>
    <string name="no_venues_added_yet">No venues added yet</string>

    <string name="add_org_success">Add organisation success</string>
    <string name="add_venue_success">Add venue success</string>
    <string name="add_menu_success">Add menu success</string>
    <string name="add_menu_item_success">Add menu item success</string>

    <string name="add_menu_failure">Add menu failure</string>
    <string name="add_menu_item_failure">Add menu item failure</string>
    <string name="add_org_failure">Add organisation failure</string>
    <string name="add_venue_failure">Add venue failure</string>

    <string name="delete_dialog_message_organisation">Are you sure you want to delete this organisation?</string>
    <string name="delete_dialog_message_menu_item">Are you sure you want to delete this menu item?</string>
    <string name="delete_dialog_message_venue">Are you sure you want to delete this venue?</string>

    <string name="organisation_delete_success_message">Your organisation is deleted successfully.</string>
    <string name="menu_delete_success_message">Your menu item is deleted successfully.</string>
    <string name="venue_delete_success_message">Your organisation is deleted successfully.</string>

    <string name="menu_delete_failure_message">Failed to delete menu</string>
    <string name="venue_delete_failure_message">Failed to delete venue</string>
    <string name="menu_item_delete_failure_message">Failed to delete item</string>

    <string name="upload_image_failure">Image upload failure</string>

<!--    validation-->
    <string name="action_add_org">Add Organisation</string>
    <string name="title_add_org">Add Organisation</string>
    <string name="title_add_menu_item">Add Menu Item</string>
    <string name="action_add_venue">Add Venue</string>
    <string name="title_add_venue">Add Venue</string>
    <string name="err_msg_select_organisation_image">Please select product image.</string>
    <string name="err_msg_enter_organisation_name">Please enter organisation name.</string>
    <string name="err_msg_enter_organisation_type">Please enter organisation type.</string>
    <string name="err_msg_enter_address">Please enter address.</string>
    <string name="err_enter_city">Please enter city</string>
    <string name="image">image</string>
    <string name="venue_card_detail_transition_name">venue_card_detail</string>
    <string name="menu_card_detail_transition_name">menu_card_detail</string>
    <string name="food_card_detail_transition_name">food_card_detail</string>

    <string name="navigate_back_icon_content_desc">Navigate back</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="btn_lbl_update">Update</string>
    <string name="add_menu">Add Menu</string>
    <string name="you_can_have_a_menu_for_each_venue_or_share_the_same_menu_across_all_of_your_venues">You can have a menu for each venue or share the same menu across all of your venues!</string>
    <string name="you_need_at_least_one_menu_to_show_your_items">You need at least one menu to show your items</string>
    <string name="you_do_not_have_any_menus">You do not have any Menus!</string>
</resources>